# safrimba

./: .env.mainnet  .env.testnet  .gitignore  Cargo.toml  DEPLOYMENT_SUMMARY.md  README.md  Single command simpe.md  contract-optimized.wasm  project_description.md  safrimba1.key  samplecode.md
.cargo/: config.toml
examples/: add_member.json  deposit_cycle1.json  init_testnet.json  query_calendar.json  query_group_info.json  query_member_info.json  start_tontine.json
schemas/: execute_msg.json  instantiate_msg.json  query_msg.json
scripts/: add_members.sh  build.sh  deploy.sh  deploy_instantiate.sh  execute.sh  instantiate.sh  query.sh  validate-schemas.sh
src/: contract.rs  lib.rs  msg.rs  schema.rs  state.rs  storage.rs
tests/: integration.rs  integration.rs.disabled
